--- a/Translate/app/src/main/res/layout/activity_device_manager.xml
+++ b/Translate/app/src/main/res/layout/activity_device_manager.xml
@@ -19,4 +19,21 @@
         android:layout_height="wrap_content"
         android:text="关闭蓝牙"/>
 
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="刷新"/>
+
+    <TextView
+        android:id="@+id/adm_tv_deviceBonded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/adm_rv_deviceList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
