--- a/Translate/app/src/main/res/values/dimens.xml
+++ b/Translate/app/src/main/res/values/dimens.xml
@@ -35,5 +35,6 @@
 
     <dimen name="corner_5">5dp</dimen>
     <dimen name="border_line_2">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
