--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -7,5 +7,10 @@
     tools:context="com.zgy.translate.activitys.VoiceTranslateActivity">
 
 
+    <Button
+        android:id="@+id/start_speech"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始录音"/>
 
 </LinearLayout>
