--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -13,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="开始录音"/>
 
+    <Button
+        android:id="@+id/stop_speech"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="停止录音"/>
+
 </LinearLayout>
