--- a/Translate/app/src/main/res/layout/activity_device_manager.xml
+++ b/Translate/app/src/main/res/layout/activity_device_manager.xml
@@ -25,14 +25,17 @@
         android:layout_height="wrap_content"
         android:text="刷新"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/adm_rv_bondeDeviceList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
+
     <TextView
-        android:id="@+id/adm_tv_deviceBonded"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/adm_tv_deviceBondState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_10"
+        android:text="搜索到设备"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/adm_rv_deviceList"
