--- a/Translate/app/src/main/res/values/colors.xml
+++ b/Translate/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#48BAF8</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorCommon">#48BAF8</color>
+    <color name="colorText">#fff</color>
+    <color name="colorBT">#bebebe</color>
+    <color name="colordcdcdc">#dcdcdc</color>
+    <color name="colorBlack">#000</color>
+
 </resources>
