--- a/Translate/app/src/main/res/layout/activity_device_manager.xml
+++ b/Translate/app/src/main/res/layout/activity_device_manager.xml
@@ -2,10 +2,21 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zgy.translate.activitys.BluetoothDeviceManagerActivity"
     android:orientation="vertical">
+
+    <com.zgy.translate.widget.CommonBar
+        android:id="@+id/adm_cb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        bar:bar_title="设备管理"
+        bar:show_left="true"
+        bar:left_icon="@mipmap/back"
+        bar:show_right="true"
+        bar:right_icon="@mipmap/setting"/>
 
     <Button
         android:id="@+id/start_blue"
