--- a/Translate/app/src/main/res/layout/activity_device_manager.xml
+++ b/Translate/app/src/main/res/layout/activity_device_manager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:bar="http://schemas.android.com/apk/res-auto"
@@ -9,8 +9,48 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/adm_ll_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorText"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_10"
+        android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/adm_pb"
+            android:layout_width="@dimen/dimen_25"
+            android:layout_height="@dimen/dimen_25" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_14"
+            android:textColor="#cdedfc"
+            android:text="刷新设备"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/adm_tv_goTran"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dimen_50"
+        android:layout_marginEnd="@dimen/dimen_50"
+        android:layout_marginBottom="@dimen/dimen_60"
+        android:layout_alignParentBottom="true"
+        android:layout_above="@id/adm_ll_refresh"
+        android:background="@drawable/bg_button_solid"
+        android:padding="@dimen/padding_10"
+        android:gravity="center"
+        android:textColor="@color/colorText"
+        android:textSize="@dimen/text_16"
+        android:text="开始翻译"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/adm_tv_goTran"
         android:orientation="vertical">
 
         <com.zgy.translate.widget.CommonBar
@@ -81,42 +121,4 @@
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/adm_ll_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/colorText"
-        android:orientation="vertical"
-        android:padding="@dimen/padding_10"
-        android:gravity="center">
-
-        <ProgressBar
-            android:id="@+id/adm_pb"
-            android:layout_width="@dimen/dimen_25"
-            android:layout_height="@dimen/dimen_25" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_14"
-            android:textColor="#cdedfc"
-            android:text="刷新设备"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/adm_tv_goTran"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_50"
-        android:layout_marginEnd="@dimen/dimen_50"
-        android:layout_marginBottom="@dimen/dimen_60"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bg_button_solid"
-        android:padding="@dimen/padding_10"
-        android:gravity="center"
-        android:textColor="@color/colorText"
-        android:textSize="@dimen/text_16"
-        android:text="开始翻译"/>
-
-</FrameLayout>
+</RelativeLayout>
