--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -1,22 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zgy.translate.activitys.VoiceTranslateActivity">
 
+    <RelativeLayout
+        android:id="@+id/avt_rl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorCommon"
+        android:padding="@dimen/padding_10">
 
-    <Button
-        android:id="@+id/start_speech"
+        <LinearLayout
+            android:id="@+id/avt_ll_tranTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/avt_tv_tranLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/colorText"
+                android:text="@string/tran_cn"/>
+
+            <ImageView
+                android:layout_width="@dimen/dimen_50"
+                android:layout_height="@dimen/dimen_25"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/tran_change"/>
+
+            <TextView
+                android:id="@+id/avt_tv_tranRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/colorText"
+                android:text="@string/tran_zn"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/avt_iv_setting"
+            android:layout_width="@dimen/dimen_25"
+            android:layout_height="@dimen/dimen_25"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:src="@mipmap/setting"/>
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/avt_iv_voice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="开始录音"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/tran_voice"/>
 
-    <Button
-        android:id="@+id/stop_speech"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="停止录音"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/avt_rv_tranContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/avt_rl"
+        android:layout_above="@id/avt_iv_voice">
+    </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+</RelativeLayout>
