--- a/Translate/app/src/main/res/layout/item_bluetooth_device.xml
+++ b/Translate/app/src/main/res/layout/item_bluetooth_device.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/colorText"
     android:padding="@dimen/padding_10">
 
     <include layout="@layout/common_horizontal_line"/>
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/ibd_iv_icon"
+        android:layout_width="@dimen/dimen_25"
+        android:layout_height="@dimen/dimen_40"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/device"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/ibd_iv_icon"
-            android:layout_width="@dimen/dimen_25"
-            android:layout_height="@dimen/dimen_50"
-            android:src="@mipmap/device"/>
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/ibd_iv_icon"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/padding_10"
+        android:paddingRight="@dimen/padding_10">
 
         <TextView
             android:id="@+id/ibd_tv_deviceName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_toEndOf="@id/ibd_iv_icon"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
             android:ellipsize="end"
             android:lines="1"
             android:textSize="@dimen/text_16"
@@ -36,16 +37,13 @@
             android:id="@+id/ibd_tv_deviceState"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/ibd_iv_icon"
-            android:layout_below="@id/ibd_tv_deviceName"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
             android:ellipsize="end"
             android:lines="1"
             android:textSize="@dimen/text_14"
-            android:textColor="@color/colordcdcdc"/>
+            android:textColor="@color/colordcdcdc"
+            android:visibility="gone"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
