--- a/Translate/app/src/main/res/values/colors.xml
+++ b/Translate/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorBT">#bebebe</color>
     <color name="colordcdcdc">#dcdcdc</color>
     <color name="colorBlack">#000</color>
+    <color name="colorOrange">#ffa500</color>
 
 </resources>
