--- a/Translate/app/src/main/res/layout/activity_splash.xml
+++ b/Translate/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zgy.translate.activitys.SplashActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@mipmap/start_app">
 
 </LinearLayout>
