--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -54,6 +54,34 @@
             android:src="@mipmap/setting"/>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/avt_ll_showConState"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/avt_rl"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <include
+            android:id="@+id/avt_unableCon"
+            layout="@layout/common_unable_to_connect"/>
+
+        <ImageView
+            android:id="@+id/avt_iv_showCon_icon"
+            android:layout_width="@dimen/dimen_25"
+            android:layout_height="@dimen/dimen_25"
+            android:src="@mipmap/connect_suc"/>
+
+        <TextView
+            android:id="@+id/avt_tv_showConText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_5"
+            android:textSize="@dimen/text_14"
+            android:textColor="@color/colorBlack" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/avt_iv_voice"
         android:layout_width="wrap_content"
@@ -66,7 +94,7 @@
         android:id="@+id/avt_rv_tranContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/avt_rl"
+        android:layout_below="@id/avt_ll_showConState"
         android:layout_above="@id/avt_iv_voice">
     </android.support.v7.widget.RecyclerView>
 
