--- a/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
+++ b/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
@@ -15,16 +15,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/tran_phone"
+        android:background="@drawable/tran_blue"
         android:layout_toStartOf="@id/itb_iv_vo">
 
         <ImageView
             android:id="@+id/itb_iv_goTTS"
-            android:layout_width="@dimen/dimen_40"
-            android:layout_height="@dimen/dimen_40"
+            android:layout_width="@dimen/dimen_30"
+            android:layout_height="@dimen/dimen_30"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:src="@mipmap/voice_volume"/>
+            android:layout_marginEnd="@dimen/margin_10"
+            android:src="@drawable/tts_voice_playing3"/>
 
         <TextView
             android:id="@+id/itb_tv_src"
