--- a/Translate/app/src/main/res/layout/item_tran_phone.xml
+++ b/Translate/app/src/main/res/layout/item_tran_phone.xml
@@ -38,11 +38,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/itp_iv_goTTS"
-            android:layout_below="@id/itp_tv_src"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="@dimen/margin_5"
             android:textSize="@dimen/text_16"
             android:textColor="@color/colorBlack" />
-
 
 
     </RelativeLayout>
