--- a/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
+++ b/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/itb_iv_goTTS"
+            android:layout_alignParentBottom="true"
             android:layout_below="@id/itb_tv_src"
             android:layout_marginTop="@dimen/margin_5"
             android:textSize="@dimen/text_16"
