--- a/Translate/app/src/main/res/layout/activity_forget_paw.xml
+++ b/Translate/app/src/main/res/layout/activity_forget_paw.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <com.zgy.translate.widget.CommonBar
+        android:id="@+id/afpp_cb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         bar:bar_title="找回密码"
