--- a/Translate/app/src/main/res/layout/activity_revise_phone.xml
+++ b/Translate/app/src/main/res/layout/activity_revise_phone.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <com.zgy.translate.widget.CommonBar
+        android:id="@+id/arp_cb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:bar_title="修改手机号"
