--- a/Translate/app/src/main/res/layout/activity_register.xml
+++ b/Translate/app/src/main/res/layout/activity_register.xml
@@ -68,7 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:minWidth="100dp"
                 android:background="@drawable/bg_button"
+                android:gravity="center"
                 android:padding="@dimen/padding_5"
                 android:textSize="@dimen/text_16"
                 android:textColor="@color/colorCommon"
