--- a/Translate/app/src/main/res/layout/activity_personalized.xml
+++ b/Translate/app/src/main/res/layout/activity_personalized.xml
@@ -16,6 +16,7 @@
         app:show_left="true"/>
 
     <EditText
+        android:id="@+id/ap_et_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_20"
@@ -28,6 +29,7 @@
         android:textSize="@dimen/text_16"/>
 
     <TextView
+        android:id="@+id/ap_tv_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_50"
