--- a/Translate/app/src/main/res/layout/activity_forget_paw.xml
+++ b/Translate/app/src/main/res/layout/activity_forget_paw.xml
@@ -36,12 +36,10 @@
                 android:textColor="@color/colorBT"
                 android:text="   手机号:"/>
 
-            <EditText
-
+            <TextView
+                android:id="@+id/afpp_tv_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@null"
-                android:inputType="phone"
                 android:textSize="@dimen/text_16"
                 android:textColor="@color/colorBT"/>
         </LinearLayout>
@@ -55,7 +53,7 @@
             android:padding="@dimen/padding_10">
 
             <TextView
-                android:id="@+id/ar_tv_code"
+                android:id="@+id/afpp_tv_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -64,18 +62,20 @@
                 android:text="   验证码:"/>
 
             <TextView
-                android:id="@+id/ar_tv_sendCode"
+                android:id="@+id/afpp_tv_sendCode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minWidth="100dp"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/bg_button"
+                android:gravity="center"
                 android:padding="@dimen/padding_5"
                 android:textSize="@dimen/text_16"
                 android:textColor="@color/colorCommon"
                 android:text="发送验证码"/>
 
             <EditText
-                android:id="@+id/ar_et_phoneCode"
+                android:id="@+id/afpp_et_phoneCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/ar_tv_code"
@@ -89,6 +89,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/afpp_tv_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_50"
