--- a/Translate/app/src/main/res/layout/activity_find_paw.xml
+++ b/Translate/app/src/main/res/layout/activity_find_paw.xml
@@ -36,12 +36,10 @@
                 android:textColor="@color/colorBT"
                 android:text="   手机号:"/>
 
-            <EditText
-
+            <TextView
+                android:id="@+id/afp_tv_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@null"
-                android:inputType="phone"
                 android:textSize="@dimen/text_16"
                 android:textColor="@color/colorBT"/>
         </LinearLayout>
@@ -62,6 +60,7 @@
                 android:text="       密码:"/>
 
             <EditText
+                android:id="@+id/afp_et_paw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -86,7 +85,7 @@
                 android:text="@string/phone_msg_again"/>
 
             <EditText
-
+                android:id="@+id/afp_et_pawAgain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -98,6 +97,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/afp_tv_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_50"
