--- a/Translate/app/src/main/res/layout/activity_forget_paw.xml
+++ b/Translate/app/src/main/res/layout/activity_forget_paw.xml
@@ -78,8 +78,8 @@
                 android:id="@+id/afpp_et_phoneCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/ar_tv_code"
-                android:layout_toStartOf="@id/ar_tv_sendCode"
+                android:layout_toEndOf="@id/afpp_tv_code"
+                android:layout_toStartOf="@id/afpp_tv_sendCode"
                 android:layout_centerVertical="true"
                 android:background="@null"
                 android:inputType="text"
