--- a/Translate/app/src/main/res/layout/activity_my_setting.xml
+++ b/Translate/app/src/main/res/layout/activity_my_setting.xml
@@ -133,31 +133,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20"
-                android:orientation="vertical"
                 android:background="@color/colorText"
+                android:orientation="vertical"
                 android:padding="@dimen/padding_10">
 
                 <com.zgy.translate.widget.CommonNav
                     android:id="@+id/ams_cn_share"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    nav:nav_leftTitle="@string/share_other"/>
+                    nav:nav_leftTitle="@string/share_other" />
 
-                <include layout="@layout/common_horizontal_line"/>
+                <include layout="@layout/common_horizontal_line" />
 
                 <com.zgy.translate.widget.CommonNav
                     android:id="@+id/ams_cn_question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    nav:nav_leftTitle="@string/often_question"/>
+                    nav:nav_leftTitle="@string/often_question" />
 
-                <include layout="@layout/common_horizontal_line"/>
+                <include layout="@layout/common_horizontal_line" />
 
                 <com.zgy.translate.widget.CommonNav
                     android:id="@+id/ams_cn_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    nav:nav_leftTitle="@string/about"/>
+                    nav:nav_leftTitle="@string/about" />
             </LinearLayout>
 
             <TextView
@@ -166,11 +166,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_40"
                 android:background="@color/colorText"
-                android:padding="@dimen/padding_10"
                 android:gravity="center"
-                android:textSize="@dimen/text_16"
-                android:textColor="@color/colordcdcdc"
-                android:text="@string/exit"/>
+                android:padding="@dimen/padding_10"
+                android:text="@string/exit"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/text_16" />
 
         </LinearLayout>
 
