--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -5,6 +5,7 @@
     xmlns:wlv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f9faf9"
     tools:context="com.zgy.translate.activitys.VoiceTranslateActivity">
 
     <RelativeLayout
