--- a/Translate/app/src/main/res/layout/common_horizontal_line.xml
+++ b/Translate/app/src/main/res/layout/common_horizontal_line.xml
@@ -2,6 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:background="@color/colordcdcdc">
+    android:background="#f4f5f4">
 
 </LinearLayout>
