--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             wlv:wlvBackgroundColor="@android:color/transparent"
-            wlv:wlvLineColor="@color/colorBlack"
+            wlv:wlvLineColor="@color/colorText"
             wlv:wlvMoveSpeed="290"/>
 
     </LinearLayout>
