--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -83,6 +83,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/colorText"
+            android:padding="@dimen/padding_10"
             android:gravity="center"
             android:visibility="gone">
 
