--- a/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
+++ b/Translate/app/src/main/res/layout/item_tran_bluetooth.xml
@@ -12,40 +12,47 @@
         android:layout_alignParentBottom="true"
         android:src="@mipmap/bluetooth"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tran_blue"
-        android:layout_toStartOf="@id/itb_iv_vo">
-
-        <ImageView
-            android:id="@+id/itb_iv_goTTS"
-            android:layout_width="@dimen/dimen_25"
-            android:layout_height="@dimen/dimen_25"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:src="@drawable/tts_voice_playing3"/>
+        android:layout_toStartOf="@id/itb_iv_vo"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/itb_tv_src"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/itb_iv_goTTS"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:textSize="@dimen/text_16"
             android:textColor="#80cef9"/>
 
-        <TextView
-            android:id="@+id/itb_tv_dst"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/itb_iv_goTTS"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/itb_tv_src"
-            android:layout_marginTop="@dimen/margin_5"
-            android:textSize="@dimen/text_16"
-            android:textColor="@color/colorBlack" />
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/itb_iv_goTTS"
+                android:layout_width="@dimen/dimen_25"
+                android:layout_height="@dimen/dimen_25"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:src="@drawable/tts_voice_playing3"/>
+
+            <TextView
+                android:id="@+id/itb_tv_dst"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/itb_iv_goTTS"
+                android:layout_centerVertical="true"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/colorBlack" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
