--- a/Translate/app/src/main/res/layout/item_tran_phone.xml
+++ b/Translate/app/src/main/res/layout/item_tran_phone.xml
@@ -11,40 +11,45 @@
         android:layout_gravity="bottom"
         android:src="@mipmap/phone"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tran_phone"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/itp_iv_goTTS"
-            android:layout_width="@dimen/dimen_25"
-            android:layout_height="@dimen/dimen_25"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/tts_voice_playing3"/>
-
         <TextView
             android:id="@+id/itp_tv_src"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/itp_iv_goTTS"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:textSize="@dimen/text_16"
             android:textColor="#5acba8"/>
 
-        <TextView
-            android:id="@+id/itp_tv_dst"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/itp_iv_goTTS"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/itp_tv_src"
-            android:layout_marginTop="@dimen/margin_5"
-            android:textSize="@dimen/text_16"
-            android:textColor="@color/colorBlack" />
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/itp_iv_goTTS"
+                android:layout_width="@dimen/dimen_25"
+                android:layout_height="@dimen/dimen_25"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/tts_voice_playing3"/>
+
+            <TextView
+                android:id="@+id/itp_tv_dst"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/itp_iv_goTTS"
+                android:layout_centerVertical="true"
+                android:textSize="@dimen/text_16"
+                android:textColor="@color/colorBlack" />
+        </RelativeLayout>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
