--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -111,29 +111,38 @@
 
     <LinearLayout
         android:id="@+id/avt_ll_wlv"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@android:color/transparent"
+        android:background="@color/colorBlack"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:padding="@dimen/padding_20"
+        android:alpha="0.5"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/avt_tv_showInputType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginBottom="@dimen/margin_10"
             android:textSize="@dimen/text_16"
             android:textColor="@color/colorText"/>
 
-        <jaygoo.widget.wlv.WaveLineView
-            android:id="@+id/avt_wlv"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            wlv:wlvBackgroundColor="@android:color/transparent"
-            wlv:wlvLineColor="@color/colorText"
-            wlv:wlvMoveSpeed="290"/>
+        <!--&lt;!&ndash;<jaygoo.widget.wlv.WaveLineView-->
+            <!--android:id="@+id/avt_wlv"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"-->
+            <!--wlv:wlvBackgroundColor="@android:color/transparent"-->
+            <!--wlv:wlvLineColor="@color/colorText"-->
+            <!--wlv:wlvMoveSpeed="290"/>&ndash;&gt;-->
+
+        <ImageView
+            android:id="@+id/avt_iv_microVolume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/microphone1"/>
 
     </LinearLayout>
 
