--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -111,13 +111,14 @@
 
     <LinearLayout
         android:id="@+id/avt_ll_wlv"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="150dp"
         android:layout_centerInParent="true"
         android:background="@color/colorBlack"
         android:orientation="vertical"
         android:padding="@dimen/padding_20"
-        android:alpha="0.5"
+        android:alpha="0.6"
         android:visibility="gone">
 
         <TextView
